# RapidEye

alert-service/: README.md
demo-app/: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
demo-app/scripts/: relay_youtube.sh  start.sh
demo-app/server/: __init__.py
demo-app/web/: package.json
vision-service/benchmarks/: README.md  pyproject.toml  requirements-bench.txt
vision-service/benchmarks/bench/: __init__.py  __main__.py  cli.py  config.py  env.py  registry.py
vision-service/benchmarks/bench/adapters/: base.py  stub.py
vision-service/benchmarks/bench/datasets/: base.py  loader.py  manifest.py  synthetic.py
vision-service/benchmarks/bench/metrics/: __init__.py  face_det.py  face_emb.py  latency.py  reid.py
vision-service/benchmarks/bench/reporting/: summary.py  visualize.py
vision-service/benchmarks/bench/runners/: batch_queue.py  isolated.py  multistream.py  pipeline.py  system.py  verify.py
vision-service/benchmarks/config/: datasets.yaml  default.yaml  models.yaml
vision-service/benchmarks/results/20260702T064528Z/: config.yaml  verify.json
vision-service/benchmarks/results/20260702T064528Z/models/: reid-osnet-pt_pytorch.json
vision-service/benchmarks/results/20260702T064609Z/: config.yaml  verify.json
vision-service/benchmarks/results/20260702T064650Z/: config.yaml  summary.md  verify.json
vision-service/benchmarks/results/20260702T073312Z/: config.yaml
vision-service/benchmarks/tests/: test_config.py  test_latency.py  test_metrics_face_emb.py  test_metrics_reid.py  test_multistream_batch.py  test_reporting.py
(+13 files in other folders)
