[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rapideye-vision-bench"
version = "0.1.0"
description = "RapidEye vision-service model benchmark harness"
requires-python = ">=3.10"
dependencies = [
  "numpy<2",
  "opencv-python-headless",
  "pillow",
  "pyyaml",
  "pandas",
  "matplotlib",
  "seaborn",
  "tqdm",
  "scikit-learn",
  "scipy",
]

[project.scripts]
rapideye-bench = "bench.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
